# Simple_OpenTTD_Client

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: SOTCCompilerWarnings.cmake  SOTCDependencies.cmake
docs/: CHANGELOG.md  CMCLIENT_ARCHITECTURE.md  DEPENDENCIES.md  DEVELOPER_SETUP.md  MANUAL_TEST_CHECKLIST.md  OPEN_TTD_PROTOCOL_DELTAS.md  PHASE3_EXECUTION_HUB.md  PHASE3_NEXT_STEPS.md  QUALITY_ASSURANCE_PLAN.md  REFERENCES.md  RELEASE_NOTES_0.1.0.md  ROADMAP.md
include/: client_app.hpp
include/gui/: configuration_preview.hpp  coordinator_settings_window.hpp  session_formatting.hpp
include/network/: constants.hpp  coordinator_client.hpp
src/: CMakeLists.txt  client_app.cpp  main.cpp
src/citymania/: cm_highlight.cpp
src/gui/: configuration_preview.cpp  coordinator_settings_window.cpp  session_formatting.cpp
src/network/: coordinator_client.cpp
tests/integration/: CMakeLists.txt  test_invalid_inputs.py  test_launch_options_dump.py
tools/: bootstrap_vcpkg.ps1  bootstrap_vcpkg.sh  package_windows.ps1
